--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -125,6 +125,11 @@
         "description": "Tooltip for options button",
         "context": "Visible in the chat view"
     },
+    "tooltipStopStreaming": "Stop streaming",
+    "@tooltipStopStreaming": {
+        "description": "Tooltip for the stop streaming button",
+        "context": "Visible in the chat view"
+    },
     "noModelSelected": "No model selected",
     "@noModelSelected": {
         "description": "Text displayed when no model is selected",
